--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 
             if (isLight) {
                 frame.src = lightUrl;
-                favicon.href = lightUrl + "/favicon.ico";
-                document.title = "Abdul Nafay - Light";
+                favicon.href = lightUrl;
+                document.title = "Abdul Nafay ";
             } else {
                 // Default for Dark Mode or any other state/error
                 frame.src = darkUrl;
-                favicon.href = darkUrl + "/favicon.ico";
-                document.title = "Abdul Nafay - Dark";
+                favicon.href = darkUrl ;
+                document.title = "Abdul Nafay";
             }
         })();
     </script>
