--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Abdul Nafay - Expert Front-End Developer and Graphic Designer in Pakistan. Creating responsive, high-performance websites and unique visual designs.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abdul Nafay</title>
     <link id="dynamic-favicon" rel="icon" type="image/png" href="dark.png">
